# teloxide-inline-widgets

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/teloxide-inline-widgets/: Cargo.toml
crates/teloxide-inline-widgets-macros/: Cargo.toml
crates/teloxide-inline-widgets-macros/src/: attribute_args.rs  attribute_parameters.rs  constants.rs  inline_widget.rs  lib.rs  schemes.rs
crates/teloxide-inline-widgets-macros/src/attribute_args/: button_args.rs  checkbox_list_args.rs  radio_list_args.rs
crates/teloxide-inline-widgets-macros/src/attribute_parameters/: button_parameters.rs  calendar_parameters.rs  checkbox_list_parameters.rs  radio_list_parameters.rs
crates/teloxide-inline-widgets-macros/src/inline_widget/: impls.rs
crates/teloxide-inline-widgets-macros/src/schemes/: button.rs  calendar.rs
crates/teloxide-inline-widgets/examples/: README.md  buttons.rs  calendar.rs  checkbox_list.rs  multiple_widgets.rs  radio_list.rs  styles.rs  widget_gallery.rs
crates/teloxide-inline-widgets/src/: layout.rs  lib.rs  prelude.rs  traits.rs  types.rs  widgets.rs
crates/teloxide-inline-widgets/src/traits/: get_size.rs  inline_widget.rs  widget_container.rs
crates/teloxide-inline-widgets/src/types/: callback_query_data.rs  checkbox_list_style.rs  radio_list_style.rs  size.rs  styles.rs  widget_styles.rs
crates/teloxide-inline-widgets/src/types/styles/: calendar_style.rs  common_style.rs
crates/teloxide-inline-widgets/src/widgets/: button.rs  calendar.rs  checkbox_list.rs  radio_list.rs
examples/: checkbox_list.rs  multiple_widgets.rs  radio_list.rs
src/: layout.rs  lib.rs  prelude.rs  traits.rs
src/traits/: component.rs  inline_widget.rs  user_defined_widget.rs  widget_container.rs
src/widgets/: checkbox_list.rs  radio_list.rs
src/widgets/checkbox_list/: checkbox_list_item_index.rs  settings.rs
src/widgets/radio_list/: radio_list_item_index.rs  settings.rs
