[package]
name = "teloxide-inline-widgets"
authors = ["Сырцев Вадим Игоревич <syrtcevvi@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = ""
keywords = [
    "teloxide",
    "inline-keyboard",
    "widgets",
    "ui",
    "telegram-bot-api"
]
rust-version = "1.79"
license = "MIT"
homepage = "https://github.com/syrtcevvi/teloxide-inline-widgets"
repository = "https://github.com/syrtcevvi/teloxide-inline-widgets"

[features]
# Currently used for building docs for `docs.rs` to add `This is supported on feature="..." only.`
nightly = []

[dependencies]
derive_more = { version = "0.99.18", default-features = false, features = ["display"] }
# TODO optional
serde = { version = "1.0.204", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde"] }
teloxide = { version = "0.12.2", default-features = false }

[dev-dependencies]
derive_more = "0.99.18"
log = "0.4.22"
pretty_assertions = "1.4.0"
pretty_env_logger = "0.5.0"
rstest = "0.22.0"
teloxide = "0.12.2"
tokio = { version = "1.39.1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "radio_list"
doc-scrape-examples = true

[[example]]
name = "checkbox_list"
doc-scrape-examples = true

[[example]]
name = "multiple_widgets"
doc-scrape-examples = true

[package.metadata.docs.rs]
# document all features
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-Znormalize-docs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]