[workspace]
members = ["crates/*"]
resolver = "2"

# The settings below will be applied to all crates in the workspace
[workspace.package]
# MSRV (minimal supported Rust version).
rust-version = "1.81"
edition = "2021"

keywords = [
    "teloxide",
    "inline-keyboard",
    "widgets",
    "ui",
    "telegram-bot-api"
]
categories = [
    "telegram", "ui"
]

license = "MIT"
homepage = "https://github.com/syrtcevvi/teloxide-inline-widgets"
repository = "https://github.com/syrtcevvi/teloxide-inline-widgets"
