[package]
name = "teloxide-inline-widgets-macros"
authors = ["Сырцев Вадим Игоревич <syrtcevvi@gmail.com>"]
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
quote = "1.0.36"
syn = { version = "2.0.75", features = ["full"] }
